--- a/index.html
+++ b/index.html
@@ -45,15 +45,26 @@
             <div class="filters">
               <form class= "bg-dark">   
                <p>Filter Search</p>
-               <ul class="bg-dark">
-                <li class ="bg-dark">
-                <label for="date">Enter Date</label>
-                <input type="text" placeholder="1/10/2010" id="datetime" />
+               <ul class="list-group bg-dark">
+                <li class ="filter list-group-item bg-dark">
+                  <label for="date">Enter Date</label>
+                  <input type="text" placeholder="1/10/2010" id="datetime" />
                 </li>
-                <li class= "bg-dark">
-                <button id="filter-btn" type="button" class="btn-dark">
-                Filter Table
-                </button>
+                <li class ="filter list-group-item bg-dark">
+                  <label for="city">Enter City</label>
+                  <input type="text" class="form-control" placeholder="benton" id="city" />
+                </li>
+                <li class ="filter list-group-item bg-dark"></li>
+                  <label for="state">Enter State</label>
+                  <input type="text" class="form-control" placeholder="ar" id="state" />
+                </li>
+                <li class ="filter list-group-item bg-dark"></li>
+                  <label for="country">Enter Country</label>
+                  <input type="text" class="form-control" placeholder="us" id="country" />
+                </li>
+                <li class ="filter list-group-item bg-dark">
+                  <label for="shape">Enter Shape</label>
+                  <input type="text" class="form-control" placeholder="circle" id="shape" />
                 </li>
                </ul>
               </form>
